--- a/noma_over_NR.ipynb
+++ b/noma_over_NR.ipynb
@@ -4,13 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hello You Saeed again"
+    "Hello You Saeed again from the server"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "saeed_tf",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
